--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>PH Gamer Zone</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="navbar-logo">
+                <img src="/images/Frame.png" alt="">
+                <h3><span class="nav-title-header-span">G</span>amer</h3>
+            </div>
+            <div class="menu-items">
+                <a href="">About Us</a>
+                <a href="">Developers</a>
+
+                <div class="menu-item-follow">
+                    <a href="">Follow us On</a>
+                    <img src="/icons/youtube.png" alt="">
+                    <img src="/icons/tik-tok.png" alt="">
+                </div>
+
+            </div>
+        </nav>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
