--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="navbar-logo">
-                <img src="/images/Frame.png" alt="">
+                <img src="./images/Frame.png" alt="">
                 <h3><span class="nav-title-header-span">G</span>amer</h3>
             </div>
             <div class="menu-items">
@@ -20,8 +20,8 @@
 
                 <div class="menu-item-follow">
                     <a href="">Follow us On</a>
-                    <img src="/icons/youtube.png" alt="">
-                    <img src="/icons/tik-tok.png" alt="">
+                    <img src="./icons/youtube.png" alt="">
+                    <img src="./icons/tik-tok.png" alt="">
                 </div>
 
             </div>
