banner section done

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-- navbar -->
         <nav>
             <div class="navbar-logo">
                 <img src="./images/Frame.png" alt="">
@@ -23,9 +24,25 @@
                     <img src="./icons/youtube.png" alt="">
                     <img src="./icons/tik-tok.png" alt="">
                 </div>
-
             </div>
         </nav>
+        <div class="banner">
+            <div class="banner-description">
+                <div class="inner-banner-desc">
+                        <h3>Play Like The</h3>
+                        <h2>G.O.A.T.</h2>
+                        <p class="banner-desc-featurelist">1-Click instant play</p>
+                        <p class="banner-desc-featurelist">No Download</p>
+                        <p class="banner-desc-featurelist">1000s of supported online games</p>
+                        <button class="primary-btn">Sign in</button>
+                        <button class="secondary-btn">Go Rogue</button>
+                </div>        
+            </div>
+            <div class="banner-image">
+                <img src="images/Group 18.png" alt="">
+                
+            </div>
+        </div>
     </header>
     <main></main>
     <footer></footer>
