card section done

--- a/index.html
+++ b/index.html
@@ -44,7 +44,36 @@
             </div>
         </div>
     </header>
-    <main></main>
+    <main>  
+        <section class="games-video-section">
+            <h2>Online Games <span class="games-video-header-span"> Funny Videos</span></h2>
+            <p class="games-video-header-description">A Collection of Hilarious Videos to Brighten Your Day</p>
+          
+            <div class="card-videos-collection">
+                                
+                <div class="inner-card-videos-collection">
+                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 6.png" alt="" class="card-video">
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>   
+                <div class="inner-card-videos-collection">
+                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 5.png" alt="" class="card-video">
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="inner-card-videos-collection">
+                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 7.png" alt="" class="card-video">
+                    <p>Breaking game records like OG</p>
+                </div>
+ 
+                <div class="inner-card-videos-collection">
+                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 4.png" alt="" class="card-video">
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+            </div>
+
+        </section>
+
+
+    </main>
     <footer></footer>
 </body>
 </html>
