online-play-section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
 
         </section>
 
-
+        <section class="online-play-section">
+            <div class="online-play-description">    
+                <h3> <span class="online-play-desc-header">Play Instantly,</span> 
+                    No Downloads
+                    No Installs.</h3>
+                <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>    
+            </div>
+            <div class="online-play-img">
+                <img class="online-play-img-1" src="./images/Rectangle 55.png" alt="">
+                <img class="online-play-img-2" src="./images/Rectangle 66.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
