--- a/index.html
+++ b/index.html
@@ -84,6 +84,45 @@
                 <img class="online-play-img-2" src="./images/Rectangle 66.png" alt="">
             </div>
         </section>
+
+        <div class="games-category-section">
+            <div class="game-types">
+                <img src="./images/Rectangle 11.png" alt="" class="games-types-img">
+                <h5>Action Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 12.png" alt="" class="games-types-img">
+                <h5>Adventure Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 13.png" alt="" class="games-types-img">
+                <h5>Strategy Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 14.png" alt="" class="games-types-img">
+                <h5>Arcade Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 15.png" alt="" class="games-types-img">
+                <h5>Educational Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 16.png" alt="" class="games-types-img">
+                <h5>Word Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 17.png" alt="" class="games-types-img">
+                <h5>Role Palying Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 18.png" alt="" class="games-types-img">
+                <h5>Music & Audio Games</h5>
+            </div>
+            <div class="game-types">
+                <img src="./images/Rectangle 19.png" alt="" class="games-types-img">
+                <h5>Puzzle Games</h5>
+            </div>
+        </div>
     </main>
     <footer></footer>
 </body>
