--- a/index.html
+++ b/index.html
@@ -124,6 +124,36 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="navbar-logo footer-logo">
+            <img src="./images/Frame.png" alt="">
+            <h3><span class="nav-title-header-span ">G</span><span class="footer-title-span">amer</span> </h3>
+        </div>
+        <div class="footer-secondary-menu">
+            <a href="">Our Story</a>
+            <a href="">Games</a>
+            <a href="">Web Games</a>
+            <a href="">Careers</a>
+            <a href="">Support</a>
+            <a href="">My Account</a>
+        </div>
+        <div class="footer-social-icons">
+            <img src="./icons/twitter.png" alt="">
+            <img src="./icons/facebook.png" alt="">
+            <img src="./icons/youtube.png" alt="">
+            <img src="./icons/linkedin.png" alt="">
+            <img src="./icons/twitter.png" alt="">
+            <img src="./icons/apple.png" alt="">
+        </div>
+        <div class="footer-terms">
+            <a href="">Terms and Conditions</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Cookie Policy</a>
+            <a href="">Privacy Settings</a>
+        </div>
+        <div class="footer-copyright">
+            <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
 </body>
 </html>
