some responsive job done-1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/Frame.png" type="image/icon type">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>PH Gamer Zone</title>
 </head>
@@ -53,7 +54,7 @@
             <div class="card-videos-collection">
                                 
                 <div class="inner-card-videos-collection">
-                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 6.png" alt="" class="card-video">
+                    <img class="inner-card-videos-collection-img" src="./images/Rectangle 6.png" alt="" class="card-video"> 
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>   
                 <div class="inner-card-videos-collection">
