--- a/index.html
+++ b/index.html
@@ -55,19 +55,43 @@
                                 
                 <div class="inner-card-videos-collection">
                     <img class="inner-card-videos-collection-img" src="./images/Rectangle 6.png" alt="" class="card-video"> 
+                    <div class="card-overlay">
+                        <a href="#" class="play-icon">
+                             <i class="fa fa-play-circle" aria-hidden="true"></i>
+                             <p>watch now</p>
+                        </a>
+                    </div>
                     <p>Busted gaming on school laptop, but you are still lit.</p>
                 </div>   
                 <div class="inner-card-videos-collection">
                     <img class="inner-card-videos-collection-img" src="./images/Rectangle 5.png" alt="" class="card-video">
+                    <div class="card-overlay">
+                        <a href="#" class="play-icon">
+                             <i class="fa fa-play-circle" aria-hidden="true"></i>
+                             <p>watch now</p>
+                        </a>
+                    </div>
                     <p>Did you score? #unblockedgames #school</p>
                 </div>
                 <div class="inner-card-videos-collection">
                     <img class="inner-card-videos-collection-img" src="./images/Rectangle 7.png" alt="" class="card-video">
+                    <div class="card-overlay">
+                        <a href="#" class="play-icon">
+                             <i class="fa fa-play-circle" aria-hidden="true"></i>
+                             <p>watch now</p>
+                        </a>
+                    </div>
                     <p>Breaking game records like OG</p>
                 </div>
  
                 <div class="inner-card-videos-collection">
                     <img class="inner-card-videos-collection-img" src="./images/Rectangle 4.png" alt="" class="card-video">
+                    <div class="card-overlay">
+                        <a href="#" class="play-icon">
+                             <i class="fa fa-play-circle" aria-hidden="true"></i>
+                             <p>watch now</p>
+                        </a>
+                    </div>
                     <p>No Download. No Installs. Play games Instantly on Gamer.</p>
                 </div>
             </div>
